# tienda-online

./: .env  README.md  package-lock.json  package.json
backend/: backend.cabal  package-lock.json  package.json  server.js
backend/.stack-work/: stack.sqlite3
backend/models/: user.js
backend/routes/: userRoutes.js
backend/src/: Main.hs
fontend/: index.html
src/: App.css  App.js
src/Carrusel/: Carrusel.js
src/Login/: Login.css  Login.js
